# moltrust-mcp-server

./: .dockerignore  .gitignore  DIRECTORIES.md  Dockerfile  README.md  SKILL.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish.yml
src/moltrust_mcp_server/: __init__.py  server.py
tests/: test_server.py
