[project]
name = "moltrust-mcp-server"
version = "0.6.0"
description = "MCP server for MolTrust — Trust Infrastructure for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CryptoKRI GmbH", email = "info@moltrust.ch" }]
keywords = ["mcp", "moltrust", "trust", "ai-agents", "did", "verifiable-credentials"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://moltrust.ch"
Repository = "https://github.com/MoltyCel/moltrust-mcp-server"
"Security Research" = "https://moltrust.ch/blog/scanned-50-agent-endpoints.html"

[project.scripts]
moltrust-mcp-server = "moltrust_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moltrust_mcp_server"]

[dependency-groups]
dev = ["pyright>=1.1.0", "ruff>=0.7.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
